Updated stylesheet to fix GitHub Gist scaling on iOS

--- a/wwwroot/css/main.css
+++ b/wwwroot/css/main.css
@@ -66,7 +66,14 @@ body > header nav a.brand h1 {
   }
 }
 
-/* line 74, ../../sass/main.scss */
+@media (max-width: 500px) {
+  /* line 74, ../../sass/main.scss */
+  .gist .file-data table.lines {
+    font-size: 10px;
+  }
+}
+
+/* line 80, ../../sass/main.scss */
 .splash {
   background: #000;
   position: fixed;
@@ -74,37 +81,37 @@ body > header nav a.brand h1 {
   z-index: -5;
 }
 @media (max-width: 500px) {
-  /* line 74, ../../sass/main.scss */
+  /* line 80, ../../sass/main.scss */
   .splash {
     display: none;
     visibility: collapse;
   }
 }
-/* line 85, ../../sass/main.scss */
+/* line 91, ../../sass/main.scss */
 .splash img {
   opacity: 0.5;
   width: 100%;
 }
 
-/* line 91, ../../sass/main.scss */
+/* line 97, ../../sass/main.scss */
 article.post {
   padding: 26px;
 }
 @media (max-width: 500px) {
-  /* line 91, ../../sass/main.scss */
+  /* line 97, ../../sass/main.scss */
   article.post {
     padding: 21px;
   }
 }
-/* line 98, ../../sass/main.scss */
+/* line 104, ../../sass/main.scss */
 article.post a {
   text-decoration: none;
 }
-/* line 102, ../../sass/main.scss */
+/* line 108, ../../sass/main.scss */
 article.post header {
   text-align: center;
 }
-/* line 106, ../../sass/main.scss */
+/* line 112, ../../sass/main.scss */
 article.post h2.title {
   color: transparent;
   display: block;
@@ -116,28 +123,28 @@ article.post h2.title {
   padding: 0;
 }
 @media (max-width: 500px) {
-  /* line 106, ../../sass/main.scss */
+  /* line 112, ../../sass/main.scss */
   article.post h2.title {
     font-size: 26px;
     line-height: 42px;
   }
 }
-/* line 121, ../../sass/main.scss */
+/* line 127, ../../sass/main.scss */
 article.post h2.title span {
   color: black;
   display: inline-block;
 }
-/* line 126, ../../sass/main.scss */
+/* line 132, ../../sass/main.scss */
 article.post h2.title .filler {
   font-weight: 300;
   font-style: italic;
 }
-/* line 131, ../../sass/main.scss */
+/* line 137, ../../sass/main.scss */
 article.post h2.title .important {
   font-weight: 600;
   text-transform: uppercase;
 }
-/* line 137, ../../sass/main.scss */
+/* line 143, ../../sass/main.scss */
 article.post .byline, article.post .tags {
   color: #777;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
@@ -146,64 +153,64 @@ article.post .byline, article.post .tags {
   margin: 0;
 }
 @media (max-width: 500px) {
-  /* line 137, ../../sass/main.scss */
+  /* line 143, ../../sass/main.scss */
   article.post .byline, article.post .tags {
     font-size: 13px;
     line-height: 21px;
   }
 }
-/* line 149, ../../sass/main.scss */
+/* line 155, ../../sass/main.scss */
 article.post .byline a, article.post .tags a {
   color: inherit;
   text-decoration: none;
 }
-/* line 155, ../../sass/main.scss */
+/* line 161, ../../sass/main.scss */
 article.post .byline {
   padding: 0;
 }
-/* line 158, ../../sass/main.scss */
+/* line 164, ../../sass/main.scss */
 article.post .byline:before {
   content: "By ";
   font-style: italic;
 }
-/* line 163, ../../sass/main.scss */
+/* line 169, ../../sass/main.scss */
 article.post .byline a.author {
   text-transform: uppercase;
 }
-/* line 168, ../../sass/main.scss */
+/* line 174, ../../sass/main.scss */
 article.post .byline .date:before {
   content: " on ";
   font-style: italic;
 }
-/* line 175, ../../sass/main.scss */
+/* line 181, ../../sass/main.scss */
 article.post .tags {
   padding: 0;
 }
-/* line 178, ../../sass/main.scss */
+/* line 184, ../../sass/main.scss */
 article.post .tags a.tag {
   font-size: 10px;
   text-transform: uppercase;
 }
 @media (max-width: 500px) {
-  /* line 178, ../../sass/main.scss */
+  /* line 184, ../../sass/main.scss */
   article.post .tags a.tag {
     font-size: 8px;
   }
 }
-/* line 186, ../../sass/main.scss */
+/* line 192, ../../sass/main.scss */
 article.post .tags a.tag:after {
   content: ",";
 }
-/* line 190, ../../sass/main.scss */
+/* line 196, ../../sass/main.scss */
 article.post .tags a.tag:last-of-type:after {
   content: "";
 }
-/* line 196, ../../sass/main.scss */
+/* line 202, ../../sass/main.scss */
 article.post .content {
   margin: 0;
   padding: 0;
 }
-/* line 200, ../../sass/main.scss */
+/* line 206, ../../sass/main.scss */
 article.post .content p {
   font-family: "Merriweather", "Times New Roman", Times, serif;
   font-size: 16px;
@@ -211,20 +218,20 @@ article.post .content p {
   margin: 26px 0 0 0;
 }
 @media (max-width: 500px) {
-  /* line 200, ../../sass/main.scss */
+  /* line 206, ../../sass/main.scss */
   article.post .content p {
     font-size: 13px;
     line-height: 21px;
     margin: 21px 0 0 0;
   }
 }
-/* line 213, ../../sass/main.scss */
+/* line 219, ../../sass/main.scss */
 article.post .content img {
   border-radius: 4px;
   display: block;
   width: 100%;
 }
-/* line 219, ../../sass/main.scss */
+/* line 225, ../../sass/main.scss */
 article.post .content a:last-of-type {
   color: #777;
   font-family: "Open Sans", Helvetica, Arial, sans-serif;
@@ -232,7 +239,7 @@ article.post .content a:last-of-type {
   text-decoration: none;
   text-transform: uppercase;
 }
-/* line 228, ../../sass/main.scss */
+/* line 234, ../../sass/main.scss */
 article.post .youtube-wrapper {
   border-radius: 4px;
   height: 0;
@@ -243,12 +250,12 @@ article.post .youtube-wrapper {
   position: relative;
 }
 @media (max-width: 500px) {
-  /* line 228, ../../sass/main.scss */
+  /* line 234, ../../sass/main.scss */
   article.post .youtube-wrapper {
     margin-top: 21px;
   }
 }
-/* line 241, ../../sass/main.scss */
+/* line 247, ../../sass/main.scss */
 article.post .youtube-wrapper iframe {
   position: absolute;
   top: 0;
